--- a/team_management/teams/static/teams/style/detail.css
+++ b/team_management/teams/static/teams/style/detail.css
@@ -64,6 +64,13 @@
     justify-content: space-between;
 }
 
+.btnContainer {
+    position: absolute;
+    bottom: 10px;
+    right: 10px
+}
+
+
 .saveBtn {
     height: 40px;
     width: 80px;
@@ -79,5 +86,12 @@
     color: #ff0000;
     border: 1px solid #cecece;
 }
+
+.errorAlert {
+    color: #ff0000;
+    width: 100%;
+    font-size: 8px;
+}
+
 
 
