--- a/team_management/teams/templates/teams/detail.html
+++ b/team_management/teams/templates/teams/detail.html
@@ -1,37 +1,13 @@
-{% extends 'teams/base.html' %}
-{% load static %}
-{% block style %}
-    <link rel="stylesheet" type="text/css" href="{% static 'teams/style/detail.css' %}">
-{% endblock %}
+{% extends 'teams/baseForm.html' %}
 
-{% block content %}
+{% block title %}
     <div class="title">Edit a team member</div>
     <div class="subtitle">Set Contact info, location and role</div>
+{% endblock %}
 
-    <div class="dividingLine"></div>
-    <form action="." method="post">
-        {% csrf_token %}
-         <div class="itemTitle">Info</div>
-         <div class="formGroup">
-             {{ form.first_name }}
-             {{ form.last_name }}
-             {{ form.email }}
-             {{ form.phone }}
-        </div>
-        <div class="itemTitle">Role</div>
-        <div class="formRadio">
-            {% for radio in form.role %}
-                <label class="radioContainer" for="{{radio.id_for_label}}">
-                    {{ radio.choice_label }}
-                    <span class="radio">{{ radio.tag }}</span>
-                </label>
-                <div class="dividingLine"></div>
-            {% endfor %}
-        </div>
-
-        <div class="btnGroup">
-            <input class="deleteBtn" type="submit" value="Delete" name="del">
-            <input class="saveBtn" type="submit" value="Save" name="edit">
-        </div>
-    </form>
+{% block button %}
+ <div class="btnGroup">
+    <input class="deleteBtn" type="submit" value="Delete" name="del">
+    <input class="saveBtn" type="submit" value="Save" name="edit">
+</div>
 {% endblock %}
